--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
         margin: 0;
         padding: 0;
         /*background-color: #f7f7f7;*/
-        background-image: url('picture3.jpg')  /*('picture3.jpg')*/
+        background-image: url('green-abstract-background-vector.jpg')  /*('picture3.jpg')*/
     }
     header {
         background-color: #007BFF;
@@ -90,6 +90,7 @@
     }
     /* Style the <p> element inside about Me" section line, moved to the right */
     #about p {
+       /* color: white;  This sets the text color to white in the paragraph p */
         margin-left: 20px; /* You can adjust the value (in pixels) to control the amount of indentation */
     }
 
@@ -101,6 +102,7 @@
 
     /* Style the main interest line */
     .main-interest {
+        font-weight: bold; /* Optionally make it bold */
         margin-top: 0; /* Remove top margin to eliminate spacing between the lines */
     }
 
