--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@
     }
 
     /* Additional CSS for your content */
-    /* For example, you can style the header text */
+    /* For example, you can style the header text 
     header {
         font-size: 24px;
     }
-
+*/
     /* Add more CSS for other elements as needed */
     body {
         font-family: Arial, sans-serif;
@@ -25,12 +25,14 @@
         /*background-color: #f7f7f7;*/
         background-image: url('green-abstract-background-vector.jpg')  /*('picture3.jpg')*/
     }
+/*
     header {
         background-color: #007BFF;
         color: white;
         text-align: center;
         padding: 2rem 0;
     }
+*/
     .container {
         max-width: 800px;
         margin: 2rem auto;
