Last update in styles.css file

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ p {
 }
     
 ul{
-    color:blue; /**/
+    color:white; /**/
 }
 
 li{
@@ -78,7 +78,7 @@ li{
 } /* blue;*/    
     
 h2{
-    color:  black;/* white;*/
+    color:  white;
     text-indent: 25px;
 }
 
