Update styles.css to black color in nav, ul, li

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ h2{
     margin-left: 20px; /* You can adjust the value (in pixels) to control the amount of indentation */
 }
 
-nav ul li{
+nav ul li a{
     color:black;
 }
     
