Update styles.css for the background.

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
         margin: 0;
         padding: 0;
         /*background-color: #f7f7f7;*/
-        background-image: url('newPicture.jpg')  /*('picture3.jpg')*/
+        background-image: url('newPicture3.png')  /*('picture3.jpg')*/
     }
     
 /**/
